infra/kubernetes/istio/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spring-api-azure-passwordlessdbapp
    app.kubernetes.io/name: spring-api-azure-passwordlessdbapp
    version: v2
    app.kubernetes.io/version: v2
  name: spring-api-azure-passwordlessdbapp-v2
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: spring-api-azure-passwordlessdbapp
      app.kubernetes.io/name: spring-api-azure-passwordlessdbapp
      version: v2
      app.kubernetes.io/version: v2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: spring-api-azure-passwordlessdbapp
        app.kubernetes.io/name: spring-api-azure-passwordlessdbapp
        version: v2
        app.kubernetes.io/version: v2
        # Important label to mutate pod
        azure.workload.identity/use: "true"
    spec:
      volumes:
      - emptyDir:
          sizeLimit: 500Mi
        name: tmp
      containers:
      - env:
        # DB username is the same as service account name for classical approach with manual DB update
        # - name: DB_USERNAME
        #   valueFrom:
        #     fieldRef:
        #       fieldPath: spec.serviceAccountName
        # For Azure Service Connector, username is included in variable SPRING_DATASOURCE_USERNAME
        - name: DB_USERNAME
          valueFrom:
            secretKeyRef:
              name: # To be filled in by kustomize
              key: SPRING_DATASOURCE_USERNAME
        - name: DB_JDBC_STRING
          valueFrom:
            secretKeyRef:
              name: # To be filled in by kustomize
              key: SPRING_DATASOURCE_URL
        - name: STYLE_VERSION
          value: v2
        image: 
        imagePullPolicy: IfNotPresent
        name: app
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        resources:
          requests:
            memory: 200Mi
            cpu: 100m
          limits:
            memory: 2Gi
            cpu: 2000m
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 20
          httpGet:
            path: /api/liveness
            port: 8080
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 20
          httpGet:
            path: /api/readiness
            port: 8080
        startupProbe:
          failureThreshold: 3
          initialDelaySeconds: 20
          httpGet:
            path: /api/readiness
            port: 8080
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 1000
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
              - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tmp
          name: tmp
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      serviceAccountName: # To be filled in by kustomize
